maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: not found: value sommeAngle
var sommeAngle():Int = 0
    ^Escaper:7: error: not found: value estBiscuit
while (!estBiscuit) {
        ^Escaper:33: error: not found: value sommeAngle
			sommeAngle() += 1
                        ^Escaper:36: error: not found: value sommeAngle
			sommeAngle() -= 1
                        ^Escaper:40: error: not found: value sommeAngle
			sommeAngle() -= 2
                        ^